src/components/launchDetails/launch.scss
@import '../../style_global.scss';

.loader {
    z-index: 10;
    position: fixed;
    top: 50%;
    width: 100vw;

    &.spinner:after {
        border: 6px solid $turquise;
        border-color: $turquise transparent $turquise transparent;
    }
}

.modal {
  z-index: 10;
  position: fixed;
  top: 0px;
  height: 100vh;
  width: 100vw;
  background-color: rgba($gray, .8);

  display: flex;
  flex-direction: column;
  justify-content: center;

  .blur {
    background-color: $black;

    @media (max-width: 768px) {
      height: inherit;
      overflow-y: scroll;
    }
  }

  .close {
    color: $white;
    margin: 10px 0px;
    padding: 0px 10px;
    text-align: right;
    &:hover {
      cursor: pointer;
    }

    @media (max-width: 768px) {
      margin-bottom: 0;
    }
  }

  .content {
    padding: 0 8vw;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    font-size: calc(10px + 1.5vmin);
    margin-bottom: 20px;

    img {
      flex: 1;
      max-width: 300px;
      max-height: 300px;

      &.loading {
        display: none;
      }
    }
  }

  // for desktops
  @media (min-width: 800px) {
    .content {
      padding: 0 8vw 0 4vw;
      flex-direction: row;
      flex-wrap: wrap;
      font-size: calc(10px + 2vmin);

      img {
        align-self: center;
      }

      &>div {
        margin-left: 4vw;
      }
    }
  }

  .info {
    color: $lightBlueGray;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 2;
    min-width: 235px;

    @media (max-width: 768px) {
      margin-top: 10px;
    }
  }

  .details {
    margin-top: 10px;
    font-size: calc(10px + 1.8vmin);
  }
}

.spinner {
  display: inline-block;
  width: 80px;
  height: 80px;
}
.spinner:after {
  content: " ";
  display: block;
  width: 68px;
  height: 68px;
  margin: 8px;
  border-radius: 50%;
  border: 6px solid #fff;
  border-color: #fff transparent #fff transparent;
  animation: spinner 1.2s linear infinite;
}
@keyframes spinner{
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

